{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 26,
  "lineage": "180fbd22-6e7b-78e1-8952-674b620f4a15",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "k3s_master",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0ea3c35c5c3284d82",
            "arn": "arn:aws:ec2:us-east-2:950246260509:instance/i-0fa4413a4a29cc138",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0fa4413a4a29cc138",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "ca0-keys",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0d37b706abdbcb02a",
            "private_dns": "ip-10-0-1-120.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.120",
            "public_dns": "ec2-3-145-176-214.us-east-2.compute.amazonaws.com",
            "public_ip": "3.145.176.214",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-027e855aedec4778c",
                "volume_size": 20,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-04a3dca309ac45248",
            "tags": {
              "Name": "CA3-K3s-3Node-master",
              "NodeType": "control-plane",
              "Project": "CA3-K3s-3Node",
              "Role": "master"
            },
            "tags_all": {
              "Name": "CA3-K3s-3Node-master",
              "NodeType": "control-plane",
              "Project": "CA3-K3s-3Node",
              "Role": "master"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-03e6e8da69e4670af"
            ]
          },
          "dependencies": [
            "aws_security_group.k3s_sg",
            "aws_subnet.k3s_public_subnet",
            "aws_vpc.k3s_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "k3s_worker_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0ea3c35c5c3284d82",
            "arn": "arn:aws:ec2:us-east-2:950246260509:instance/i-01a087476788f195e",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-01a087476788f195e",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "ca0-keys",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-034df2d3c2d1dca1c",
            "private_dns": "ip-10-0-1-28.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.28",
            "public_dns": "ec2-3-145-59-84.us-east-2.compute.amazonaws.com",
            "public_ip": "3.145.59.84",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0676673fc0701d44a",
                "volume_size": 20,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-04a3dca309ac45248",
            "tags": {
              "Name": "CA3-K3s-3Node-worker-1",
              "NodeType": "data-services",
              "Project": "CA3-K3s-3Node",
              "Role": "worker"
            },
            "tags_all": {
              "Name": "CA3-K3s-3Node-worker-1",
              "NodeType": "data-services",
              "Project": "CA3-K3s-3Node",
              "Role": "worker"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-03e6e8da69e4670af"
            ]
          },
          "dependencies": [
            "aws_instance.k3s_master",
            "aws_security_group.k3s_sg",
            "aws_subnet.k3s_public_subnet",
            "aws_vpc.k3s_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "k3s_worker_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0ea3c35c5c3284d82",
            "arn": "arn:aws:ec2:us-east-2:950246260509:instance/i-029aab18999bcf6c5",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-029aab18999bcf6c5",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.small",
            "ipv6_address_count": 0,
            "key_name": "ca0-keys",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-00075be510eb2bc58",
            "private_dns": "ip-10-0-1-131.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.131",
            "public_dns": "ec2-3-145-69-142.us-east-2.compute.amazonaws.com",
            "public_ip": "3.145.69.142",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-032f6c4aaa3662c27",
                "volume_size": 20,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-04a3dca309ac45248",
            "tags": {
              "Name": "CA3-K3s-3Node-worker-2",
              "NodeType": "application-services",
              "Project": "CA3-K3s-3Node",
              "Role": "worker"
            },
            "tags_all": {
              "Name": "CA3-K3s-3Node-worker-2",
              "NodeType": "application-services",
              "Project": "CA3-K3s-3Node",
              "Role": "worker"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-03e6e8da69e4670af"
            ]
          },
          "dependencies": [
            "aws_instance.k3s_master",
            "aws_security_group.k3s_sg",
            "aws_subnet.k3s_public_subnet",
            "aws_vpc.k3s_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "k3s_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:950246260509:internet-gateway/igw-0ed771bfff082eabd",
            "id": "igw-0ed771bfff082eabd",
            "owner_id": "950246260509",
            "tags": {
              "Name": "CA3-K3s-3Node-igw",
              "Project": "CA3-K3s-3Node"
            },
            "tags_all": {
              "Name": "CA3-K3s-3Node-igw",
              "Project": "CA3-K3s-3Node"
            },
            "vpc_id": "vpc-0a746bc2d22b2ef21"
          },
          "dependencies": [
            "aws_vpc.k3s_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "k3s_public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:950246260509:route-table/rtb-0c747bf4703f01a6f",
            "id": "rtb-0c747bf4703f01a6f",
            "owner_id": "950246260509",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0ed771bfff082eabd",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "CA3-K3s-3Node-public-rt",
              "Project": "CA3-K3s-3Node"
            },
            "tags_all": {
              "Name": "CA3-K3s-3Node-public-rt",
              "Project": "CA3-K3s-3Node"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a746bc2d22b2ef21"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.k3s_igw",
            "aws_vpc.k3s_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "k3s_public_rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09e4f40fc806b033e",
            "route_table_id": "rtb-0c747bf4703f01a6f",
            "subnet_id": "subnet-04a3dca309ac45248"
          },
          "dependencies": [
            "aws_route_table.k3s_public_rt",
            "aws_subnet.k3s_public_subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "k3s_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:950246260509:security-group/sg-03e6e8da69e4670af",
            "description": "Security group for K3s cluster",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03e6e8da69e4670af",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Grafana web UI",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Processor health endpoint",
                "from_port": 8001,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8001
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Producer health endpoint",
                "from_port": 8000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Prometheus web UI",
                "from_port": 9090,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9090
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "K3s flannel VXLAN",
                "from_port": 8472,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": false,
                "to_port": 8472
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "K3s flannel Wireguard",
                "from_port": 51820,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": false,
                "to_port": 51820
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "K3s kubelet API",
                "from_port": 10250,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 10250
              },
              {
                "cidr_blocks": [
                  "2.59.157.106/32",
                  "10.0.0.0/16"
                ],
                "description": "K3s API server",
                "from_port": 6443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 6443
              },
              {
                "cidr_blocks": [
                  "2.59.157.106/32"
                ],
                "description": "SSH access from your IP",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "Allow all traffic between cluster nodes",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "name": "CA3-K3s-3Node-sg",
            "name_prefix": "",
            "owner_id": "950246260509",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "CA3-K3s-3Node-sg",
              "Project": "CA3-K3s-3Node"
            },
            "tags_all": {
              "Name": "CA3-K3s-3Node-sg",
              "Project": "CA3-K3s-3Node"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a746bc2d22b2ef21"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.k3s_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "k3s_public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:950246260509:subnet/subnet-04a3dca309ac45248",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04a3dca309ac45248",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "950246260509",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "CA3-K3s-3Node-public-subnet",
              "Project": "CA3-K3s-3Node"
            },
            "tags_all": {
              "Name": "CA3-K3s-3Node-public-subnet",
              "Project": "CA3-K3s-3Node"
            },
            "vpc_id": "vpc-0a746bc2d22b2ef21"
          },
          "dependencies": [
            "aws_vpc.k3s_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "k3s_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:950246260509:vpc/vpc-0a746bc2d22b2ef21",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0365e2e4e11934012",
            "default_route_table_id": "rtb-0c747bf4703f01a6f",
            "default_security_group_id": "sg-01b30a0b169f05d7b",
            "dhcp_options_id": "dopt-0a70be524b94c2303",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0a746bc2d22b2ef21",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0c747bf4703f01a6f",
            "owner_id": "950246260509",
            "tags": {
              "Name": "CA3-K3s-3Node-vpc",
              "Project": "CA3-K3s-3Node"
            },
            "tags_all": {
              "Name": "CA3-K3s-3Node-vpc",
              "Project": "CA3-K3s-3Node"
            }
          }
        }
      ]
    }
  ]
}